--- a/index.html
+++ b/index.html
@@ -8,11 +8,46 @@
   </head>
 
   <body>
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="html/MyAdvisor/myAdvisor.html">Advisor</a></li>
-        <li><a href="html/MyActivities/myActivities.html">Activities</a></li>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="html/MyAdvisor/myAdvisor.html">Advisor</a></li>
+      <li><a href="html/MyActivities/myActivities.html">Activities</a></li>
+    </ul>
+    <section class="content">
+      <figure class="pic">
+        <img src="img/my_photo.jpg" alt="not load">
+        
+      </figure>
+      <section class="information-section">
+        <h1 class="passport-title">My CSTU Passport</h1>
+        <dl>
+          <dt>ชื่อ / Name</dt>
+          <dd>นายณัฐดนัย พันธุเสนา</dd>
+          <dd>Natdanai Phantusena</dd>
 
-      </ul>
+          <dt>ชื่อเล่น / Nickname</dt>
+          <dd>ปลื้ม/Pluem</dd>
+
+          <dt>อายุ / Age</dt>
+          <dd>18 ปี / 18 years</dd>
+
+          <dt>สัญชาติ / Nationality</dt>
+          <dd>ไทย / Thai</dd>
+
+          <dt>คณะ / Faculty</dt>
+          <dd>วิทยาศาสตร์ / Science</dd>
+
+          <dt>สาขา / Major</dt>
+          <dd>วิทยาการคอมพิวเตอร์</dd>
+          <dd>Computer Science</dd>
+
+          <dt>เลขนักศึกษา</dt>
+          <dd>66096119915</dd>
+        </dl>
+    </section>
+    <video class="introduce-video" 
+    src="VDO/my_video.mp4" 
+    alt="introducing video" 
+    controls=""></video>
   </body>
 </html>
