--- a/html/MyActivities/myActivities.html
+++ b/html/MyActivities/myActivities.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../css/stylesheet.css"/>
+    <link rel="stylesheet" href="../../css/Advisor.css"/>
     <title>Advisor</title>
   </head>
 
@@ -12,7 +12,7 @@
         <li><a href="../../index.html">Home</a></li>
         <li><a href="../MyAdvisor/myAdvisor.html">Advisor</a></li>
         <li><a class="active" href="../MyActivities/myActivities.html">Activities</a></li>
-
       </ul>
+      <h1>Activities</h1>
   </body>
 </html>
