--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       <li><a href="html/MyAdvisor/myAdvisor.html">Advisor</a></li>
       <li><a href="html/MyActivities/myActivities.html">Activities</a></li>
     </ul>
+    <section class="information-section">
+    <h1 class="passport-title">My CSTU Passport</h1>
     <section class="content">
       <figure class="pic">
         <img src="img/my_photo.jpg" alt="not load">
         
       </figure>
       <section class="information-section">
-        <h1 class="passport-title">My CSTU Passport</h1>
         <dl>
           <dt>ชื่อ / Name</dt>
           <dd>นายณัฐดนัย พันธุเสนา</dd>
