--- a/html/MyAdvisor/myAdvisor.html
+++ b/html/MyAdvisor/myAdvisor.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../css/stylesheet.css"/>
+    <link rel="stylesheet" href="../../css/Advisor.css"/>
     <title>Advisor</title>
   </head>
 
@@ -12,7 +12,10 @@
         <li><a href="../../index.html">Home</a></li>
         <li><a class="active" href="../MyAdvisor/myAdvisor.html">Advisor</a></li>
         <li><a href="../MyActivities/myActivities.html">Activities</a></li>
-
       </ul>
+      <h1 class="title">Advisor</h1>
+        <img src="https://comscithammasatu.github.io/cs100/Static%20Web/Lecture-MP1.png"
+      alt="not load">
+      <h2>Asst.Prof.Dr. MONVORARAT PONGPAIBOON</h2>
   </body>
 </html>
