--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <dd>วิทยาการคอมพิวเตอร์</dd>
           <dd>Computer Science</dd>
 
-          <dt>เลขนักศึกษา</dt>
+          <dt>เลขนักศึกษา / Student ID</dt>
           <dd>66096119915</dd>
         </dl>
     </section>
