--- a/html/MyActivities/CSTU-Firstmeet.html
+++ b/html/MyActivities/CSTU-Firstmeet.html
@@ -13,9 +13,7 @@
         <li><a href="../MyAdvisor/myAdvisor.html">Advisor</a></li>
         <li><a class="active" href="myActivities.html">Activities</a></li>
       </ul>
-      <h1>Activities</h1>
-      <a class="card" href="CSTU-Firstmeet.html">
-        <img src="../../img/CSTU_FirstMeet.jpg" alt="not load" style="width:100%">
-      </a>
+      <h1>CSTU Firstmeet</h1>
+      <img src="../../img/CSTU_FirstMeet.jpg" alt="not load" style="width: 50%">
   </body>
 </html>
