--- a/html/MyAdvisor/myAdvisor.html
+++ b/html/MyAdvisor/myAdvisor.html
@@ -10,7 +10,7 @@
   <body>
       <ul>
         <li><a href="../../index.html">Home</a></li>
-        <li><a class="active" href="../MyAdvisor/myAdvisor.html">Advisor</a></li>
+        <li><a class="active" href="myAdvisor.html">Advisor</a></li>
         <li><a href="../MyActivities/myActivities.html">Activities</a></li>
       </ul>
       <h1 class="title">Advisor</h1>
