--- a/html/MyAdvisor/advisor.html
+++ b/html/MyAdvisor/advisor.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSTU Firstmeet</title>
+        <title>My CSTU Passport</title>
         <link rel="stylesheet" href="../../css/style.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="header">
-            <H2>CSTU Firstmeet</H2>
+            <H2>My Advisor</H2>
         </div>
         <div class="row">
             <div class="col-3 col-s-3 menu">
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../MyAdvisor/advisor.html">Advisor</a></li>
-                    <li><a  class="active" href="activities.html">Activities</a></li>
+                    <li><a  class="active" href="advisor.html">Advisor</a></li>
+                    <li><a href="../MyActivities/activities.html">Activities</a></li>
                 </ul>
             </div>
             <div class="col-6 col-s-9">
-                <h1>CSTU Firstmeet</h1>
                 <figure class="pic">
-                  <img src="../../img/CSTU_FirstMeet.jpg" alt="not load" style="width:100%">
+                    <img src="https://comscithammasatu.github.io/cs100/Static%20Web/Lecture-MP1.png"
+                    alt="not load">
                 </figure>
+                <section class="information-section">
+                    <h2>Asst.Prof.Dr. MONVORARAT PONGPAIBOON</h2>
+                </section>
             </div>
         </div>      
     </body>
