--- a/html/MyActivities/activities.html
+++ b/html/MyActivities/activities.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSTU Firstmeet</title>
+        <title>My Activities</title>
         <link rel="stylesheet" href="../../css/style.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="header">
-            <H2>CSTU Firstmeet</H2>
+            <H2>My Activities</H2>
         </div>
         <div class="row">
             <div class="col-3 col-s-3 menu">
@@ -19,10 +19,10 @@
                 </ul>
             </div>
             <div class="col-6 col-s-9">
-                <h1>CSTU Firstmeet</h1>
-                <figure class="pic">
-                  <img src="../../img/CSTU_FirstMeet.jpg" alt="not load" style="width:100%">
-                </figure>
+                <h1>Activities</h1>
+                <a class="card" href="CSTU-Firstmeet.html">
+                <img src="../../img/CSTU_FirstMeet.jpg" alt="not load" style="width:100%">
+                </a>
             </div>
         </div>      
     </body>
