--- a/index.html
+++ b/index.html
@@ -1,54 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/stylesheet.css"/>
-    <title>My CSTU Passport homepage</title>
-  </head>
-
-  <body>
-    <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="html/MyAdvisor/myAdvisor.html">Advisor</a></li>
-      <li><a href="html/MyActivities/myActivities.html">Activities</a></li>
-    </ul>
-    <section class="information-section">
-    <h1 class="passport-title">My CSTU Passport</h1>
-    <section class="content">
-      <figure class="pic">
-        <img src="img/my_photo.jpg" alt="not load">
-        
-      </figure>
-      <section class="information-section">
-        <dl>
-          <dt>ชื่อ / Name</dt>
-          <dd>นายณัฐดนัย พันธุเสนา</dd>
-          <dd>Natdanai Phantusena</dd>
-
-          <dt>ชื่อเล่น / Nickname</dt>
-          <dd>ปลื้ม/Pluem</dd>
-
-          <dt>อายุ / Age</dt>
-          <dd>18 ปี / 18 years</dd>
-
-          <dt>สัญชาติ / Nationality</dt>
-          <dd>ไทย / Thai</dd>
-
-          <dt>คณะ / Faculty</dt>
-          <dd>วิทยาศาสตร์ / Science</dd>
-
-          <dt>สาขา / Major</dt>
-          <dd>วิทยาการคอมพิวเตอร์</dd>
-          <dd>Computer Science</dd>
-
-          <dt>เลขนักศึกษา / Student ID</dt>
-          <dd>66096119915</dd>
-        </dl>
-    </section>
-    <video class="introduce-video" 
-    src="VDO/my_video.mp4" 
-    alt="introducing video" 
-    controls=""></video>
-  </body>
+    <head>
+        <title>My CSTU Passport</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <div class="header">
+            <H2>My CSTU Passport</H2>
+        </div>
+        <div class="row">
+            <div class="col-3 col-s-3 menu">
+                <ul>
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="html/MyAdvisor/advisor.html">Advisor</a></li>
+                    <li><a href="html/MyActivities/activities.html">Activities</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-s-9">
+                <figure class="pic">
+                <img src="img/my_photo.jpg" alt="not load" ></img>
+                </figure>
+                <section class="information-section">
+                    <h3>ชื่อ / name</h3>
+                    <p>ณัฐดนัย พันธุเสนา / Natdanai Phantusena</p>
+                    <h3>ชื่อเล่น / Nickname</h3>
+                    <p>ปลื้ม / Pluem</p>
+                    <h3>อายุ / Age</h3>
+                    <p>18</p>
+                    <h3>สัญชาติ / Nationality</h3>
+                    <p>ไทย / Thai</p>
+                    <h3>คณะ / Faculty</h3>
+                    <p>วิทยาศาสตร์ / Science</p>
+                    <h3>สาขา / Major</h3>
+                    <p>วิทยาการคอมพิวเตอร์ / Computer Science</p>
+                    <h3>เลขนักศึกษา / Student ID</h3>
+                    <p>6609611915</p>
+                </section>
+                <video class="introduce-video" 
+                        src="VDO/my_video.mp4" 
+                        alt="introducing video" 
+                        controls=""></video>
+            </div>
+        </div>      
+    </body>
 </html>
